--- a/接口文档.md
+++ b/接口文档.md
@@ -1,225 +1,225 @@
-½Ó¿ÚÎÄµµ
+æ¥å£æ–‡æ¡£
 ============
 
 
-### Ô¤Ô¼
-#### ¶ÌĞÅÑéÖ¤Âë vcode
-* ** ÇëÇóµØÖ· **£º/api/bespeak/vcode
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-&ensp;&ensp; phone£ºÊÖ»úºÅ
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+### é¢„çº¦
+#### çŸ­ä¿¡éªŒè¯ç  vcode
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/bespeak/vcode
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+&ensp;&ensp; phoneï¼šæ‰‹æœºå·
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/bespeak/vcode?phone=123456
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦"}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ"}
 
 
-#### Ô¤Ô¼ save
-* ** ÇëÇóµØÖ· **£º/api/bespeak/save
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-&ensp;&ensp; phone£ºÊÖ»úºÅ
-&ensp;&ensp; vcode£º¶ÌĞÅÑéÖ¤Âë
-&ensp;&ensp; info£ºÀ´Ô´
-&ensp;&ensp; info2£ºÔ¤Ô¼Æ½Ì¨
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+#### é¢„çº¦ save
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/bespeak/save
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+&ensp;&ensp; phoneï¼šæ‰‹æœºå·
+&ensp;&ensp; vcodeï¼šçŸ­ä¿¡éªŒè¯ç 
+&ensp;&ensp; infoï¼šæ¥æº
+&ensp;&ensp; info2ï¼šé¢„çº¦å¹³å°
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/bespeak/save?phone=123456&vcode=123333&info=pc&info2=ios
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦"}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ"}
 
-#### Ô¤Ô¼Á¿ count
-* ** ÇëÇóµØÖ· **£º/api/bespeak/count
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+#### é¢„çº¦é‡ count
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/bespeak/count
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/bespeak/count
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦", "data":1000}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ", "data":1000}
 
-### Å¤µ°
-#### Å¤µ°ÅäÖÃ type
-* ** ÇëÇóµØÖ· **£º/api/active/type
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+### æ‰­è›‹
+#### æ‰­è›‹é…ç½® type
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/active/type
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/active/type
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦", "data": {...}}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ", "data": {...}}
 
 
-#### ½±ÀøÁĞ±í config
-* ** ÇëÇóµØÖ· **£º/api/active/config
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+#### å¥–åŠ±åˆ—è¡¨ config
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/active/config
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/active/config
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦", "data": [{...},{...}...]}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ", "data": [{...},{...}...]}
 
-#### ²ÎÓëÅ¤µ° save
-* ** ÇëÇóµØÖ· **£º/api/active/save
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-&ensp;&ensp; phone£ºÊÖ»úºÅ
-&ensp;&ensp; info£º¸½¼ÓĞÅÏ¢
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+#### å‚ä¸æ‰­è›‹ save
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/active/save
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+&ensp;&ensp; phoneï¼šæ‰‹æœºå·
+&ensp;&ensp; infoï¼šé™„åŠ ä¿¡æ¯
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/active/save?phone=123456&info=
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦", "data": {active: 0, config: 0}}
-* ** ËµÃ÷ **£º
-&ensp;&ensp; ÏìÓ¦½á¹ûdataÀïµÄactiveÊÇÖĞ½±¼ÇÂ¼µÄpid£»configÊÇËùÖĞ½±ÏîµÄpid£¬0±íÊ¾ÎªÖĞ½±¡£
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ", "data": {active: 0, config: 0}}
+* ** è¯´æ˜ **ï¼š
+&ensp;&ensp; å“åº”ç»“æœdataé‡Œçš„activeæ˜¯ä¸­å¥–è®°å½•çš„pidï¼›configæ˜¯æ‰€ä¸­å¥–é¡¹çš„pidï¼Œ0è¡¨ç¤ºä¸ºä¸­å¥–ã€‚
 
-#### È·ÈÏ½±Æ· sure
-* ** ÇëÇóµØÖ· **£º/api/active/sure
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-&ensp;&ensp; phone£ºÊÖ»úºÅ
-&ensp;&ensp; active£ºÖĞ½±¼ÇÂ¼pid£¬ÓÉ²ÎÓëÅ¤µ°½Ó¿Ú·µ»Ø¡£
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+#### ç¡®è®¤å¥–å“ sure
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/active/sure
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+&ensp;&ensp; phoneï¼šæ‰‹æœºå·
+&ensp;&ensp; activeï¼šä¸­å¥–è®°å½•pidï¼Œç”±å‚ä¸æ‰­è›‹æ¥å£è¿”å›ã€‚
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/active/sure?phone=123456&active=10
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦"}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ"}
 
 
-#### ·ÖÏí share
-* ** ÇëÇóµØÖ· **£º/api/active/share
-* ** ÇëÇó·½Ê½ **£ºget/post
-* ** ÇëÇó²ÎÊı **£º
-&ensp;&ensp; phone£ºÊÖ»úºÅ
-&ensp;&ensp; from£º·ÖÏí·½Ê½£¬Ö»ÓĞ QQ/WX/WBÈıÖÖ¡£
-* ** ÏìÓ¦½á¹û **£º
-&ensp;&ensp; code£º´óÓÚ0±íÊ¾³É¹¦
-&ensp;&ensp; msg£º´íÎóÃèÊö
-&ensp;&ensp; data£º½á¹û¼¯
-* ** Ê¾Àı **£º
+#### åˆ†äº« share
+* ** è¯·æ±‚åœ°å€ **ï¼š/api/active/share
+* ** è¯·æ±‚æ–¹å¼ **ï¼šget/post
+* ** è¯·æ±‚å‚æ•° **ï¼š
+&ensp;&ensp; phoneï¼šæ‰‹æœºå·
+&ensp;&ensp; fromï¼šåˆ†äº«æ–¹å¼ï¼Œåªæœ‰ QQ/WX/WBä¸‰ç§ã€‚
+* ** å“åº”ç»“æœ **ï¼š
+&ensp;&ensp; codeï¼šå¤§äº0è¡¨ç¤ºæˆåŠŸ
+&ensp;&ensp; msgï¼šé”™è¯¯æè¿°
+&ensp;&ensp; dataï¼šç»“æœé›†
+* ** ç¤ºä¾‹ **ï¼š
 &ensp;&ensp; http://127.0.0.1:8085/api/active/share?phone=123456&from=QQ
-&ensp;&ensp; {"code": 1, "msg": "³É¹¦"}
+&ensp;&ensp; {"code": 1, "msg": "æˆåŠŸ"}
 
-### ´íÎóÂë
+### é”™è¯¯ç 
 ````java
-	/**³É¹¦*/
-	public static final Tips ERROR1 = new Tips(1, "³É¹¦ ");
-	/**Ê§°Ü*/
-	public static final Tips ERROR0 = new Tips(0, "Ê§°Ü ");
+	/**æˆåŠŸ*/
+	public static final Tips ERROR1 = new Tips(1, "æˆåŠŸ ");
+	/**å¤±è´¥*/
+	public static final Tips ERROR0 = new Tips(0, "å¤±è´¥ ");
 	
-	//Ê§°ÜÀàĞÍ
-	/**ÏµÍ³´íÎó*/
-	public static final Tips ERROR100 = new Tips(-100, "ÏµÍ³´íÎó");
-	/**±£´æÊ§°Ü£¬{param}*/
-	public static final Tips ERROR101 = new Tips(-101, "±£´æÊ§°Ü£¬{param}");
-	/**ĞŞ¸ÄÊ§°Ü£¬{param}*/
-	public static final Tips ERROR102 = new Tips(-102, "ĞŞ¸ÄÊ§°Ü£¬{param}");
-	/**²éÑ¯Ê§°Ü£¬{param}*/
-	public static final Tips ERROR103 = new Tips(-103, "²éÑ¯Ê§°Ü£¬{param}");
-	/**É¾³ıÊ§°Ü£¬{param}*/
-	public static final Tips ERROR104 = new Tips(-104, "É¾³ıÊ§°Ü£¬{param}");
-	/**{param}ÒÑ´æÔÚ*/
-	public static final Tips ERROR105 = new Tips(-105, "{param}ÒÑ´æÔÚ");
-	/**{param}²»´æÔÚ*/
-	public static final Tips ERROR106 = new Tips(-106, "{param}²»´æÔÚ");
-	/**{param}±»·â½û*/
-	public static final Tips ERROR107 = new Tips(-107, "{param}±»·â½û");
-	/**{param}µÇÂ¼Ê§°Ü*/
-	public static final Tips ERROR108 = new Tips(-108, "{param}µÇÂ¼Ê§°Ü");
-	/**ÓÃ»§Ãû´íÎó*/
-	public static final Tips ERROR109 = new Tips(-109, "ÓÃ»§Ãû´íÎó");
-	/**ÃÜÂë´íÎó*/
-	public static final Tips ERROR110 = new Tips(-110, "ÃÜÂë´íÎó");
-	/**Î´µÇÂ¼*/
-	public static final Tips ERROR111 = new Tips(-111, "Î´µÇÂ¼");
-	/**ÎÄ¼şÉÏ´«Ê§°Ü*/
-	public static final Tips ERROR112 = new Tips(-112, "ÎÄ¼şÉÏ´«Ê§°Ü");
-	/**{param}Éú³ÉÊ§°Ü*/
-	public static final Tips ERROR113 = new Tips(-113, "{param}Éú³ÉÊ§°Ü");
-	/**{param}Ê§°Ü*/
-	public static final Tips ERROR114 = new Tips(-114, "{param}Ê§°Ü");
+	//å¤±è´¥ç±»å‹
+	/**ç³»ç»Ÿé”™è¯¯*/
+	public static final Tips ERROR100 = new Tips(-100, "ç³»ç»Ÿé”™è¯¯");
+	/**ä¿å­˜å¤±è´¥ï¼Œ{param}*/
+	public static final Tips ERROR101 = new Tips(-101, "ä¿å­˜å¤±è´¥ï¼Œ{param}");
+	/**ä¿®æ”¹å¤±è´¥ï¼Œ{param}*/
+	public static final Tips ERROR102 = new Tips(-102, "ä¿®æ”¹å¤±è´¥ï¼Œ{param}");
+	/**æŸ¥è¯¢å¤±è´¥ï¼Œ{param}*/
+	public static final Tips ERROR103 = new Tips(-103, "æŸ¥è¯¢å¤±è´¥ï¼Œ{param}");
+	/**åˆ é™¤å¤±è´¥ï¼Œ{param}*/
+	public static final Tips ERROR104 = new Tips(-104, "åˆ é™¤å¤±è´¥ï¼Œ{param}");
+	/**{param}å·²å­˜åœ¨*/
+	public static final Tips ERROR105 = new Tips(-105, "{param}å·²å­˜åœ¨");
+	/**{param}ä¸å­˜åœ¨*/
+	public static final Tips ERROR106 = new Tips(-106, "{param}ä¸å­˜åœ¨");
+	/**{param}è¢«å°ç¦*/
+	public static final Tips ERROR107 = new Tips(-107, "{param}è¢«å°ç¦");
+	/**{param}ç™»å½•å¤±è´¥*/
+	public static final Tips ERROR108 = new Tips(-108, "{param}ç™»å½•å¤±è´¥");
+	/**ç”¨æˆ·åé”™è¯¯*/
+	public static final Tips ERROR109 = new Tips(-109, "ç”¨æˆ·åé”™è¯¯");
+	/**å¯†ç é”™è¯¯*/
+	public static final Tips ERROR110 = new Tips(-110, "å¯†ç é”™è¯¯");
+	/**æœªç™»å½•*/
+	public static final Tips ERROR111 = new Tips(-111, "æœªç™»å½•");
+	/**æ–‡ä»¶ä¸Šä¼ å¤±è´¥*/
+	public static final Tips ERROR112 = new Tips(-112, "æ–‡ä»¶ä¸Šä¼ å¤±è´¥");
+	/**{param}ç”Ÿæˆå¤±è´¥*/
+	public static final Tips ERROR113 = new Tips(-113, "{param}ç”Ÿæˆå¤±è´¥");
+	/**{param}å¤±è´¥*/
+	public static final Tips ERROR114 = new Tips(-114, "{param}å¤±è´¥");
 	
-	//ÑéÖ¤ÀàĞÍ
-	/**{param}ÎŞĞ§/²»ºÏ·¨*/
-	public static final Tips ERROR200 = new Tips(-200, "{param}ÎŞĞ§/²»ºÏ·¨"); 
-	/**Ã»ÓĞÈ¨ÏŞ*/
-	public static final Tips ERROR201 = new Tips(-201, "Ã»ÓĞÈ¨ÏŞ");
-	/**{param}²ÎÊı´íÎó*/
-	public static final Tips ERROR202 = new Tips(-202, "{param}²ÎÊı´íÎó"); 
-	/**{param}Ğ§ÑéÊ§°Ü*/
-	public static final Tips ERROR203 = new Tips(-203, "{param}Ğ§ÑéÊ§°Ü"); 
-	/**Í¼ĞÎÑéÖ¤Âë²»ÕıÈ·*/
-	public static final Tips ERROR204 = new Tips(-204, "Í¼ĞÎÑéÖ¤Âë²»ÕıÈ·");
-	/**¶ÌĞÅÑéÖ¤Âë²»ÕıÈ·*/
-	public static final Tips ERROR205 = new Tips(-205, "¶ÌĞÅÑéÖ¤Âë²»ÕıÈ·");
-	/**È±ÉÙ{param}²ÎÊı */
-	public static final Tips ERROR206 = new Tips(-206, "È±ÉÙ{param}²ÎÊı ");
-	/**Í¼ĞÎÑéÖ¤ÂëÒÑ¹ıÆÚ*/
-	public static final Tips ERROR207 = new Tips(-207, "Í¼ĞÎÑéÖ¤ÂëÒÑ¹ıÆÚ");
-	/**¶ÌĞÅÑéÖ¤ÂëÒÑ¹ıÆÚ*/
-	public static final Tips ERROR208 = new Tips(-208, "¶ÌĞÅÑéÖ¤ÂëÒÑ¹ıÆÚ");
-	/**{param}³¬Ê±*/
-	public static final Tips ERROR209 = new Tips(-209, "{param}³¬Ê±");
-	/**{param}³¬¹ıÏŞÖÆ*/
-	public static final Tips ERROR210 = new Tips(-210, "{param}³¬¹ıÏŞÖÆ");
-	/**{param}²»ÄÜÎª¿Õ*/
-	public static final Tips ERROR211 = new Tips(-211, "{param}²»ÄÜÎª¿Õ");
-	/**²»Ö§³Ö¸Ã¸ñÊ½*/
-	public static final Tips ERROR212 = new Tips(-212, "²»Ö§³Ö¸Ã¸ñÊ½");
-	/**{param}²»ÕıÈ·*/
-	public static final Tips ERROR213 = new Tips(-213, "{param}²»ÕıÈ·");
-	/**{param}ÒÑ¹ıÆÚ*/
-	public static final Tips ERROR214 = new Tips(-214, "{param}ÒÑ¹ıÆÚ");
+	//éªŒè¯ç±»å‹
+	/**{param}æ— æ•ˆ/ä¸åˆæ³•*/
+	public static final Tips ERROR200 = new Tips(-200, "{param}æ— æ•ˆ/ä¸åˆæ³•"); 
+	/**æ²¡æœ‰æƒé™*/
+	public static final Tips ERROR201 = new Tips(-201, "æ²¡æœ‰æƒé™");
+	/**{param}å‚æ•°é”™è¯¯*/
+	public static final Tips ERROR202 = new Tips(-202, "{param}å‚æ•°é”™è¯¯"); 
+	/**{param}æ•ˆéªŒå¤±è´¥*/
+	public static final Tips ERROR203 = new Tips(-203, "{param}æ•ˆéªŒå¤±è´¥"); 
+	/**å›¾å½¢éªŒè¯ç ä¸æ­£ç¡®*/
+	public static final Tips ERROR204 = new Tips(-204, "å›¾å½¢éªŒè¯ç ä¸æ­£ç¡®");
+	/**çŸ­ä¿¡éªŒè¯ç ä¸æ­£ç¡®*/
+	public static final Tips ERROR205 = new Tips(-205, "çŸ­ä¿¡éªŒè¯ç ä¸æ­£ç¡®");
+	/**ç¼ºå°‘{param}å‚æ•° */
+	public static final Tips ERROR206 = new Tips(-206, "ç¼ºå°‘{param}å‚æ•° ");
+	/**å›¾å½¢éªŒè¯ç å·²è¿‡æœŸ*/
+	public static final Tips ERROR207 = new Tips(-207, "å›¾å½¢éªŒè¯ç å·²è¿‡æœŸ");
+	/**çŸ­ä¿¡éªŒè¯ç å·²è¿‡æœŸ*/
+	public static final Tips ERROR208 = new Tips(-208, "çŸ­ä¿¡éªŒè¯ç å·²è¿‡æœŸ");
+	/**{param}è¶…æ—¶*/
+	public static final Tips ERROR209 = new Tips(-209, "{param}è¶…æ—¶");
+	/**{param}è¶…è¿‡é™åˆ¶*/
+	public static final Tips ERROR210 = new Tips(-210, "{param}è¶…è¿‡é™åˆ¶");
+	/**{param}ä¸èƒ½ä¸ºç©º*/
+	public static final Tips ERROR211 = new Tips(-211, "{param}ä¸èƒ½ä¸ºç©º");
+	/**ä¸æ”¯æŒè¯¥æ ¼å¼*/
+	public static final Tips ERROR212 = new Tips(-212, "ä¸æ”¯æŒè¯¥æ ¼å¼");
+	/**{param}ä¸æ­£ç¡®*/
+	public static final Tips ERROR213 = new Tips(-213, "{param}ä¸æ­£ç¡®");
+	/**{param}å·²è¿‡æœŸ*/
+	public static final Tips ERROR214 = new Tips(-214, "{param}å·²è¿‡æœŸ");
 	
-	//ÌáÊ¾ÀàĞÍ
-	/**²»ÔÚ»î¶¯Ê±¼ä¶Î*/
-	public static final Tips ERROR300 = new Tips(-300, "²»ÔÚ»î¶¯Ê±¼ä¶Î");
-	/**»î¶¯Î´¿ªÊ¼*/
-	public static final Tips ERROR301 = new Tips(-301, "»î¶¯Î´¿ªÊ¼");
-	/**»î¶¯ÒÑ½áÊø*/
-	public static final Tips ERROR302 = new Tips(-302, "»î¶¯ÒÑ½áÊø"); 
-	/**ÒÑ²Î¼Ó¹ı*/
-	public static final Tips ERROR303 = new Tips(-303, "ÒÑ²Î¼Ó¹ı"); 
-	/**´ÎÊıÒÑÓÃÍê*/
-	public static final Tips ERROR304 = new Tips(-304, "´ÎÊıÒÑÓÃÍê");
-	/**½âÎöJSON/XMLÄÚÈİ´íÎó*/
-	public static final Tips ERROR305 = new Tips(-305, "½âÎöJSON/XMLÄÚÈİ´íÎó");
-	/**½âÎö´íÎó*/
-	public static final Tips ERROR306 = new Tips(-306, "½âÎö´íÎó");
-	/**ĞèÌá¹©Í¼ĞÎÑéÖ¤Âë*/
-	public static final Tips ERROR307 = new Tips(-307, "ĞèÌá¹©Í¼ĞÎÑéÖ¤Âë");
-	/**ÒÑ·¢ËÍ£¬ÉÔºóÔÙÊÔ*/
-	public static final Tips ERROR308 = new Tips(-308, "ÒÑ·¢ËÍ£¬ÉÔºóÔÙÊÔ");
-	/**Àñ°üÂëÒÑÓÃÍê*/
-	public static final Tips ERROR309 = new Tips(-309, "Àñ°üÂëÒÑÓÃÍê");
-	/**Ã»ÓĞÅäÖÃÓÊ¼ş*/
-	public static final Tips ERROR310 = new Tips(-310, "Ã»ÓĞÅäÖÃÓÊ¼ş");
-	/**ÓÊ¼şÄÚÈİÃ»ÓĞÅäÖÃ,»òÃ»ÆôÓÃ*/
-	public static final Tips ERROR311 = new Tips(-311, "ÓÊ¼şÄÚÈİÃ»ÓĞÅäÖÃ,»òÃ»ÆôÓÃ");
-	/**Ã»ÓĞÅäÖÃ¶ÌĞÅ*/
-	public static final Tips ERROR312 = new Tips(-312, "Ã»ÓĞÅäÖÃ¶ÌĞÅ");
-	/**¶ÌĞÅÄÚÈİÃ»ÓĞÅäÖÃ,»òÃ»ÆôÓÃ*/
-	public static final Tips ERROR313 = new Tips(-313, "¶ÌĞÅÄÚÈİÃ»ÓĞÅäÖÃ,»òÃ»ÆôÓÃ");
-	/**¶ÌĞÅÑéÖ¤ÂëÃ»ÓĞÅäÖÃ,»òÃ»ÆôÓÃ*/
-	public static final Tips ERROR314 = new Tips(-314, "¶ÌĞÅÑéÖ¤ÂëÃ»ÓĞÅäÖÃ,»òÃ»ÆôÓÃ");
+	//æç¤ºç±»å‹
+	/**ä¸åœ¨æ´»åŠ¨æ—¶é—´æ®µ*/
+	public static final Tips ERROR300 = new Tips(-300, "ä¸åœ¨æ´»åŠ¨æ—¶é—´æ®µ");
+	/**æ´»åŠ¨æœªå¼€å§‹*/
+	public static final Tips ERROR301 = new Tips(-301, "æ´»åŠ¨æœªå¼€å§‹");
+	/**æ´»åŠ¨å·²ç»“æŸ*/
+	public static final Tips ERROR302 = new Tips(-302, "æ´»åŠ¨å·²ç»“æŸ"); 
+	/**å·²å‚åŠ è¿‡*/
+	public static final Tips ERROR303 = new Tips(-303, "å·²å‚åŠ è¿‡"); 
+	/**æ¬¡æ•°å·²ç”¨å®Œ*/
+	public static final Tips ERROR304 = new Tips(-304, "æ¬¡æ•°å·²ç”¨å®Œ");
+	/**è§£æJSON/XMLå†…å®¹é”™è¯¯*/
+	public static final Tips ERROR305 = new Tips(-305, "è§£æJSON/XMLå†…å®¹é”™è¯¯");
+	/**è§£æé”™è¯¯*/
+	public static final Tips ERROR306 = new Tips(-306, "è§£æé”™è¯¯");
+	/**éœ€æä¾›å›¾å½¢éªŒè¯ç */
+	public static final Tips ERROR307 = new Tips(-307, "éœ€æä¾›å›¾å½¢éªŒè¯ç ");
+	/**å·²å‘é€ï¼Œç¨åå†è¯•*/
+	public static final Tips ERROR308 = new Tips(-308, "å·²å‘é€ï¼Œç¨åå†è¯•");
+	/**ç¤¼åŒ…ç å·²ç”¨å®Œ*/
+	public static final Tips ERROR309 = new Tips(-309, "ç¤¼åŒ…ç å·²ç”¨å®Œ");
+	/**æ²¡æœ‰é…ç½®é‚®ä»¶*/
+	public static final Tips ERROR310 = new Tips(-310, "æ²¡æœ‰é…ç½®é‚®ä»¶");
+	/**é‚®ä»¶å†…å®¹æ²¡æœ‰é…ç½®,æˆ–æ²¡å¯ç”¨*/
+	public static final Tips ERROR311 = new Tips(-311, "é‚®ä»¶å†…å®¹æ²¡æœ‰é…ç½®,æˆ–æ²¡å¯ç”¨");
+	/**æ²¡æœ‰é…ç½®çŸ­ä¿¡*/
+	public static final Tips ERROR312 = new Tips(-312, "æ²¡æœ‰é…ç½®çŸ­ä¿¡");
+	/**çŸ­ä¿¡å†…å®¹æ²¡æœ‰é…ç½®,æˆ–æ²¡å¯ç”¨*/
+	public static final Tips ERROR313 = new Tips(-313, "çŸ­ä¿¡å†…å®¹æ²¡æœ‰é…ç½®,æˆ–æ²¡å¯ç”¨");
+	/**çŸ­ä¿¡éªŒè¯ç æ²¡æœ‰é…ç½®,æˆ–æ²¡å¯ç”¨*/
+	public static final Tips ERROR314 = new Tips(-314, "çŸ­ä¿¡éªŒè¯ç æ²¡æœ‰é…ç½®,æˆ–æ²¡å¯ç”¨");
 
-	//×Ô¶¨Òå
-	/**Î´²Î¼ÓÔ¤Ô¼*/
-	public static final Tips ERROR400 = new Tips(-400, "Î´²Î¼ÓÔ¤Ô¼");
+	//è‡ªå®šä¹‰
+	/**æœªå‚åŠ é¢„çº¦*/
+	public static final Tips ERROR400 = new Tips(-400, "æœªå‚åŠ é¢„çº¦");
 ````
