--- a/部署文档.md
+++ b/部署文档.md
@@ -1,47 +1,55 @@
-²¿ÊğÎÄµµ
+éƒ¨ç½²æ–‡æ¡£
 ============
-ÔËĞĞ»·¾³£º
+è¿è¡Œç¯å¢ƒï¼š
 * java 1.8+
 * mysql 5.5+
 
-Ä¿Â¼½á¹¹£º
+å‘å¸ƒç›®å½•ç»“æ„ï¼š
 ```
 -config
---application.properties //ÅäÖÃÎÄ¼ş
--website_ccydhz.jar   //Ö÷³ÌĞò
--start.sh	//Æô¶¯½Å±¾
+--application.properties //é…ç½®æ–‡ä»¶
+-website_ccydhz.jar   //ä¸»ç¨‹åº
+-start.sh	//å¯åŠ¨è„šæœ¬
 ````
 
 
-### Êı¾İ¿â
-Ö´ĞĞwebsite_ccydhz.sqlÎÄ¼ş£¬³õÊ¼»¯Êı¾İ¿â¡£
+### æ•°æ®åº“  website_ccydhz.sql
+æ‰§è¡Œwebsite_ccydhz.sqlæ–‡ä»¶ï¼Œåˆå§‹åŒ–æ•°æ®åº“ã€‚
 ````
-s_active //Å¤µ°¼ÇÂ¼±í
-s_active_config //Å¤µ°½±ÀøÅäÖÃ±í
-s_active_type //Å¤µ°»î¶¯ÅäÖÃ±í
-s_bespeak //Ô¤Ô¼¼ÇÂ¼±í
-s_bespeak_config //Ô¤Ô¼»î¶¯ÅäÖÃ±í
+s_active //æ‰­è›‹è®°å½•è¡¨
+s_active_config //æ‰­è›‹å¥–åŠ±é…ç½®è¡¨
+s_active_type //æ‰­è›‹æ´»åŠ¨é…ç½®è¡¨
+s_bespeak //é¢„çº¦è®°å½•è¡¨
+s_bespeak_config //é¢„çº¦æ´»åŠ¨é…ç½®è¡¨
 ......
 
 ````
 
-### ÅäÖÃÎÄ¼ş
-configÄ¿Â¼ÏÂapplication.propertiesÎªÅäÖÃÎÄ¼ş¡£ÕıÊ½²¿ÊğÊ±ĞèĞŞ¸ÄÈçÏÂÄÚÈİ£º
-* ĞŞ¸Ä¶Ë¿Ú£º
+### é¡¹ç›®  dist
+
+#### é…ç½®æ–‡ä»¶
+configç›®å½•ä¸‹application.propertiesä¸ºé…ç½®æ–‡ä»¶ã€‚æ­£å¼éƒ¨ç½²æ—¶éœ€ä¿®æ”¹å¦‚ä¸‹å†…å®¹ï¼š
+* ä¿®æ”¹ç«¯å£ï¼š
 ````java
 server.port=8085
 ````
-* ĞŞ¸ÄÊı¾İ¿âÁ¬½Ó
+* ä¿®æ”¹æ•°æ®åº“è¿æ¥
 ````java
- ###########Êı¾İ¿â¶ÁĞ´·ÖÀëÅäÖÃ################# 
+ ###########æ•°æ®åº“è¯»å†™åˆ†ç¦»é…ç½®################# 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/website_ccydhz?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ````
-* ĞŞ¸Ä¶ÌĞÅÅäÖÃ
+* ä¿®æ”¹çŸ­ä¿¡é…ç½®
+ä¿®æ”¹çŸ­ä¿¡å†…å®¹å¦‚ä¸‹ï¼š
 ````java
-#¶ÌĞÅÑéÖ¤Âë
+#çŸ­ä¿¡éªŒè¯ç å†…å®¹ï¼Œå…¶ä¸­{vcode} ä¸ºéªŒè¯ç å ä½ï¼Œä¸­æ–‡è¦Unicode  
+sms_vcode_content=test\u77ed\u4fe1\u5185\u5bb9: \u9a8c\u8bc1\u7801\u4e3a{vcode}
+````
+ä»¥ä¸‹å†…å®¹å·²æ— æ•ˆ 20180810
+````java
+#çŸ­ä¿¡éªŒè¯ç 
 sms_url=http://39.106.219.228:18888/bsmp/submit
 sms_accessKey=xldm
 sms_secretKey=xldm123
@@ -51,14 +59,14 @@ sms_reqId=test
 sms_srcId=
 sms_regReport=false
 sms_expireTime=0
-#¶ÌĞÅÑéÖ¤ÂëÄÚÈİ£¬ÆäÖĞ{vcode} ÎªÑéÖ¤ÂëÕ¼Î»£¬ÖĞÎÄÒªUnicode  
-sms_vcode_content=test\u77ed\u4fe1\u5185\u5bb9£º\u9a8c\u8bc1\u7801\u4e3a{vcode}
 ````
-* ĞŞ¸ÄÉÏ´«Â·¾¢
+
+* ä¿®æ”¹ä¸Šä¼ è·¯åŠ²
+å»ºè®®ä¸Šä¼ è·¯åŠ²ä¸ºé¡¹ç›®ä¸»ç¨‹åºå¹³çº§çš„uploadç›®å½•ä¸‹
 ````java
-#ÉÏ´«    E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
+#ä¸Šä¼     E:/Workspaces/ecworkspace/20171207/docs/docs_api/upload/
 upload_path=E:/Workspaces/ecworkspace/website_ccydhz/upload/
 ````
 
-### Æô¶¯
-Ö´ĞĞstart.sh½Å±¾¡£
+#### å¯åŠ¨
+æ‰§è¡Œstart.shè„šæœ¬ã€‚
