--- a/部署文档.md
+++ b/部署文档.md
@@ -60,7 +60,14 @@ sms_srcId=
 sms_regReport=false
 sms_expireTime=0
 ````
-
+* 微信jssdk
+````java
+#微信jssdk
+appId=
+appSecret=
+# 当为true时，控制台会输出当前微信jssdk的调用信息，已方便调试
+jssdkDebug=true
+````
 * 修改上传路劲
 建议上传路劲为项目主程序平级的upload目录下
 ````java
