--- a/接口文档.md
+++ b/接口文档.md
@@ -116,6 +116,21 @@
 &ensp;&ensp; http://127.0.0.1:8085/api/active/share?phone=123456&from=QQ
 &ensp;&ensp; {"code": 1, "msg": "成功"}
 
+
+### 微信
+#### 微信jssdk配置
+* ** 请求地址 **：/api/wxjs/config
+* ** 请求方式 **：get/post
+* ** 请求参数 **：
+&ensp;&ensp; url：域名。
+* ** 响应结果 **：
+&ensp;&ensp; code：大于0表示成功
+&ensp;&ensp; msg：错误描述
+&ensp;&ensp; data：结果集
+* ** 示例 **：
+&ensp;&ensp; http://127.0.0.1:8085/api/wxjs/config?url=http://www.baidu.com
+&ensp;&ensp; {"code": 1, "msg": "成功", "data": {...}}
+
 ### 错误码
 ````java
 	/**成功*/
