--- a/接口文档.md
+++ b/接口文档.md
@@ -81,9 +81,13 @@
 &ensp;&ensp; code：大于0表示成功
 &ensp;&ensp; msg：错误描述
 &ensp;&ensp; data：结果集
+* ** 结果集Data说明 **：
+&ensp;&ensp; active：中奖记录pid
+&ensp;&ensp; config：中奖的奖品
+&ensp;&ensp; giftCode：中奖的奖品的礼包码，如果为空表示礼包码已用完。
 * ** 示例 **：
 &ensp;&ensp; http://127.0.0.1:8085/api/active/save?phone=123456&info=
-&ensp;&ensp; {"code": 1, "msg": "成功", "data": {active: 0, config: 0}}
+&ensp;&ensp; {"code": 1, "msg": "成功", "data": {active: 0, config: 0, giftCode:''}}
 * ** 说明 **：
 &ensp;&ensp; 响应结果data里的active是中奖记录的pid；config是所中奖项的pid，0表示为中奖。
 
@@ -101,6 +105,20 @@
 &ensp;&ensp; http://127.0.0.1:8085/api/active/sure?phone=123456&active=10
 &ensp;&ensp; {"code": 1, "msg": "成功"}
 
+#### 查询已获得奖品 actived
+* ** 请求地址 **：/api/active/actived
+* ** 请求方式 **：get/post
+* ** 请求参数 **：
+&ensp;&ensp; phone：手机号
+* ** 响应结果 **：
+&ensp;&ensp; code：大于0表示成功
+&ensp;&ensp; msg：错误描述
+&ensp;&ensp; data：结果集
+* ** 结果集Data说明 **：
+&ensp;&ensp; 数组里的info属性保存的就是礼包码。
+* ** 示例 **：
+&ensp;&ensp; http://127.0.0.1:8085/api/active/actived?phone=123456
+&ensp;&ensp; {"code": 1, "msg": "成功", "data": [{...},{...}...]}
 
 #### 分享 share
 * ** 请求地址 **：/api/active/share
@@ -130,6 +148,7 @@
 * ** 示例 **：
 &ensp;&ensp; http://127.0.0.1:8085/api/wxjs/config?url=http://www.baidu.com
 &ensp;&ensp; {"code": 1, "msg": "成功", "data": {...}}
+
 
 ### 错误码
 ````java
