--- a/后台使用文档.md
+++ b/后台使用文档.md
@@ -48,8 +48,16 @@
 ** 手机号 **
 ** 奖励pid **
 
+* 扭蛋礼包码
+** 分类 **
+** 礼包码 **
+** 领取人 **
+** 日期 **
+
 ### 特别说明
 * 预约量：真实预约量 + 配置里的偏移量。
 * 扭蛋的参数次数：参加次数 + 分享次数 * 每次分享获得的次数；如果参加次数为-1（不限量），那么分享次数无效。
 * 扭蛋中奖概率：0-1之间的小数。如果为0，不会中奖，如果为1，一定中奖。
 * 扭蛋奖品数量：如果奖品总数已用完，那么即使中奖也会变成未中奖。
+* 扭蛋礼包码：礼包码以文件上传形式录入，需要注意文件格式（一行为一个礼包码）。如需重新录入，请清空原来礼包码再新增。本功能不会检测重复，请自行确保礼包码的唯一性。
+
