--- a/接口文档.md
+++ b/接口文档.md
@@ -1,5 +1,6 @@
 接口文档
 ============
+
 [TOC]
 
 ### 预约
@@ -160,7 +161,7 @@
 　　data：{"code": 1, "msg": "成功", data: {...}}
 * **示例**：
 　　http://127.0.0.1:8085/api/background/find
-```json
+```javascript
 {
 	"msg": "成功",
 	"code ":1,
@@ -190,7 +191,7 @@
 　　data：{"code": 1, "msg": "成功", data: {...}}
 * **示例**：
 　　http://127.0.0.1:8085/api/other/findByType?type=1
-```json
+```javascript
 {
 	"msg": "成功 ",
 	"code": 1,
@@ -218,7 +219,7 @@
 　　data：{"code": 1, "msg": "成功", data: [{...},...]}
 * **示例**：
 　　http://127.0.0.1:8085/api/download/find
-```json
+```javascript
 {
 	"msg": "成功 ",
 	"code": 1,
@@ -254,7 +255,7 @@
 　　data：{"code": 1, "msg": "成功", data: [{...},...]}
 * **示例**：
 　　http://127.0.0.1:8085/api/news/findByType?page=1&rows=10
-```json
+```javascript
 {
 	"msg": "成功 ",
 	"total": 4,  //总条数
