--- a/后台使用文档.md
+++ b/后台使用文档.md
@@ -7,52 +7,52 @@
 
 ### 预约管理
 * 预约配置:
-** pid **：默认1。
-** 开始时间 **：时间范围，空表示不限制开始时间
-** 结束时间 **：时间范围，空表示不限制结束时间
-** 状态 **：开启/关闭预约功能。
-** 偏移量 **：手动修改预约总量。
+**pid**：默认1。
+**开始时间**：时间范围，空表示不限制开始时间
+**结束时间**：时间范围，空表示不限制结束时间
+**状态**：开启/关闭预约功能。
+**偏移量**：手动修改预约总量。
 * 预约记录
-** 日期 **
-** IP **
-** 手机号 **
-** 来源 **
-** 平台 **
+**日期**
+**IP**
+**手机号**
+**来源**
+**平台**
 
 
 ### 扭蛋管理
 * 扭蛋配置:
-** pid **：默认2。
-** 开始时间 **：时间范围，空表示不限制开始时间
-** 结束时间 **：时间范围，空表示不限制结束时间
-** 状态 **：开启/关闭扭蛋功能。
-** 参加次数 **：活动可参加的次数。
-** 每次分享获得的次数 **：每分享一次获得的活动次数。
+**pid**：默认2。
+**开始时间**：时间范围，空表示不限制开始时间
+**结束时间**：时间范围，空表示不限制结束时间
+**状态**：开启/关闭扭蛋功能。
+**参加次数**：活动可参加的次数。
+**每次分享获得的次数**：每分享一次获得的活动次数。
 
 * 奖励配置:
-** pid **：自定义数字，且唯一。
-** 名称 **
-** 画师 **
-** CV **
-** 舰种 **
-** 星级 **
-** 图片 **
-** 描述 **
-** 排序 **
-** 概率 **：中将概率，0-1之间的小数。
-** 数量 **：奖品的总数，-1表示不限量。
+**pid**：自定义数字，且唯一。
+**名称**
+**画师**
+**CV**
+**舰种**
+**星级**
+**图片**
+**描述**
+**排序**
+**概率**：中将概率，0-1之间的小数。
+**数量**：奖品的总数，-1表示不限量。
 
 * 扭蛋记录
-** 日期 **
-** IP **
-** 手机号 **
-** 奖励pid **
+**日期**
+**IP**
+**手机号**
+**奖励pid**
 
 * 扭蛋礼包码
-** 分类 **
-** 礼包码 **
-** 领取人 **
-** 日期 **
+**分类**
+**礼包码**
+**领取人**
+**日期**
 
 ### 特别说明
 * 预约量：真实预约量 + 配置里的偏移量。
@@ -61,3 +61,24 @@
 * 扭蛋奖品数量：如果奖品总数已用完，那么即使中奖也会变成未中奖。
 * 扭蛋礼包码：礼包码以文件上传形式录入，需要注意文件格式（一行为一个礼包码）。如需重新录入，请清空原来礼包码再新增。本功能不会检测重复，请自行确保礼包码的唯一性。
 
+------------------------------------
+
+## 官网
+
+### 界面管理
+#### 背景配置
+#### 其他配置
+### 下载管理
+#### 下载配置
+### 新闻管理
+#### 新闻发布
+### 推荐管理
+#### 推荐配置
+### 社交管理
+#### 社交配置
+### 游戏音画文
+#### 图集配置
+#### 影音配置
+#### 文库配置
+### 游戏角色
+#### 角色配置
