--- a/接口文档.md
+++ b/接口文档.md
@@ -499,6 +499,7 @@
 		"recommend": 0,  //推荐  0--否，1--是
 		"highlight": 0,  //加精  0--否，1--是
 		"down": "",  //下载地址
+		"size": 0,  //时长（秒）
 		"sort": 999,  //排序，默认999
 		"status": 1  //状态   0：禁用，1：启用
 	}, ...
@@ -579,6 +580,7 @@
 		"recommend": 0,  //推荐  0--否，1--是
 		"highlight": 0,  //加精  0--否，1--是
 		"down": "",  //下载地址
+		"size": 0,  //原图大小（KB）
 		"sort": 999,  //排序，默认999
 		"status": 1  //状态   0：禁用，1：启用
 	}, ...
