英雄添加字段

--- a/接口文档.md
+++ b/接口文档.md
@@ -784,10 +784,12 @@
 		"sicon4": "",  //技能四图标（备用）
 		"sdesc4": "",  //技能四描述（备用）
 		"icon": "",  //头像
-		"img1": "",  //PC图片一
-		"img2": "",  //PC图片二（备用）
-		"img3": "",  //移动图片一
-		"img4": ""   //移动图片二（备用）
+		"pimg1": "",  //PC首页Q图
+		"pimg2": "",  //PC首页大图
+		"pimg3": "",  //PC列表大图
+		"mimg1": "",  //移动首页Q图
+		"mimg2": "",  //移动首页大图
+		"mimg3": ""   //移动列表大图
 	}, ...
 	]
 }
