strategy add findByPid

--- a/接口文档.md
+++ b/接口文档.md
@@ -741,6 +741,21 @@
 * **说明**：
 说明参见“按分类获取文学”的说明。
 
+#### 获取文学详情 findByPid
+* **请求地址**：/api/strategy/findByPid
+* **请求方式**：get/post
+* **请求参数**：
+　　pid：文学id
+* **响应结果**：
+　　code：大于0表示成功
+　　msg：错误描述
+　　data：{"code": 1, "msg": "成功", data: {...}}
+* **示例**：
+　　http://127.0.0.1:8085/api/strategy/findByPid?pid=8
+　　参见“按分类获取文学”的示例。
+* **说明**：
+说明参见“按分类获取文学”的说明。
+
 ### 游戏角色
 #### 获取全部角色列表 findByType
 * **请求地址**：/api/heroes/findByType
